--- a/src/Components/CoursesList/index.scss
+++ b/src/Components/CoursesList/index.scss
@@ -1,9 +1,12 @@
+body{
+    background-color: #171717;
+}
 section{
     padding: 10px;
     // padding-left: 15px;
     background-color: #171717;
     width: 100%;
-    height: 1200px;
+    height: 100vh;
     ul{
         padding-left: 15px;
         display: grid;
