--- a/src/pages/addCourse.scss
+++ b/src/pages/addCourse.scss
@@ -4,6 +4,9 @@
   
   body {
     background-color: #a1a1a1;
+    margin: 0;
+    padding: 0;
+    height: 100%;
   }
   
   #pageMain {
@@ -23,9 +26,7 @@
     grid-auto-rows: auto;
     align-items: center;
     text-align: center;
-    background-color: #363636;
-    border-radius: 30px;
-  
+    background-color: #363636;  
     h1 {
       font-weight: bold;
       font-size: 24px;
