--- a/src/pages/addCourse.scss
+++ b/src/pages/addCourse.scss
@@ -168,7 +168,11 @@
     border-radius: 20px;
   
     @media (max-width: 480px) {
+      h1{
+        font-size: 28px;
+      }
       width: 100%;
+      border-radius: 0;
     }
   }
   
