--- a/src/pages/addCourse.scss
+++ b/src/pages/addCourse.scss
@@ -34,6 +34,7 @@
     }
   
     @media (max-width: 768px) {
+      width: 109%;
       grid-template-columns: repeat(3, 1fr);
       gap: 10px;
   
@@ -91,7 +92,9 @@
       display: flex;
       background-color: #5c5c5c;
       border-radius: 20px;
-  
+      @media(max-width: 480px){
+        border-radius: 0;
+      }
       form {
         width: 80%;
   
