--- a/src/Components/CoursesList/index.scss
+++ b/src/Components/CoursesList/index.scss
@@ -6,7 +6,7 @@ section{
     // padding-left: 15px;
     background-color: #171717;
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     ul{
         padding-left: 15px;
         display: grid;
